# CPlusPLus_CrashCourse

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_project.ps1  setup_dependencies.ps1  temp_exec  test_arrays  test_list  test_set  test_set_complex
01_Basic/: 01_hello.cpp  03_auto_example.cpp  04_flow.cpp  05_range_based_for_example.cpp  06_constexpr  06_constexpr.cpp  07_nullptr_example.cpp  08_type_conversions.cpp  10_namespaces  10_namespaces.cpp  11_iterators  11_iterators.cpp  12_structured_bindings  12_structured_bindings.cpp  README.md  constexpr.cpp  variables.cpp
02_Pointers/: 01_null_pointers.cpp  03_pointers.cpp  04_referenceVsPointers.cpp  05_pointers_advanced.cpp  06_smartpointers.cpp  README.md  null_pointers  null_pointers.cpp  out_and_ref_example.cpp  pointers  pointers.cpp  pointers_advanced.cpp  referenceVsPointers.cpp  smartpointers  smartpointers.cpp
03_Collections/: 01_arrays.cpp  02_vector.cpp  03_list_example.cpp  04_set_example  04_set_example.cpp  05_map_example  05_map_example.cpp  06_multimap_example.cpp  07_deque_example  07_deque_example.cpp  08_stack_example  08_stack_example.cpp  09_queue_example  09_queue_example.cpp  10_unordered_map_example  10_unordered_map_example.cpp  11_unordered_set_example.cpp  README.md  set_example_complex.cpp
03_Vectors/: README.md  arrays.cpp  vector.cpp
04_Enums/: README.md  enum_class.cpp
04_FunctionsAndLambdas/: lambdas  lambdas.cpp
05_Functions/: README.md  functions.cpp  noexcept.cpp
05_STL/: README.md  algorithm_example.cpp  array_example.cpp  chrono_example.cpp  vector  (+27 more)
(+151 files in other folders)
